# rust-study

./: .gitignore
activities/: Cargo.toml
activities/src/: demo-lib.rs  helper.rs
activities/src/group/: g1.rs  mod.rs
make_http/: Cargo.toml  README.md
make_http/public/: index.html
make_http/src/: main.rs  server.rs  website_handler.rs
make_http/src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
rust_study/: README.md  run.sh
rust_study/src/: main.rs
tutorials/: comments.rs  formatted-print.rs
ultimate_rust2/exercise/closures_iterators/src/: main.rs
ultimate_rust2/exercise/docs/src/: lib.rs
ultimate_rust2/exercise/idiomatic/src/: main.rs
