[package]
name = "activities"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "demo"
path = "src/demo-lib.rs"

[dependencies]
chrono = "0.4.24"
humantime = "2.0.1"
thiserror = "1.0.40"
structopt = "0.3.26"